# arreglos

./: CMakeLists.txt  funcion1.cpp  funcion1.h  funcion2.cpp  funcion2.h  funcion3.cpp  funcion3.h  funcion4.cpp  funcion4.h  funcion5.cpp  funcion5.h  funcion6.cpp  funcion6.h  funcion7.cpp  funcion7.h  main.cpp
