cmake_minimum_required(VERSION 3.30)
project(arreglos)

set(CMAKE_CXX_STANDARD 20)

add_executable(arreglos main.cpp
        funcion1.cpp
        funcion1.h
        funcion2.cpp
        funcion2.h
        funcion3.cpp
        funcion3.h
        funcion4.cpp
        funcion4.h
        funcion5.cpp
        funcion5.h
        funcion6.cpp
        funcion6.h
        funcion7.cpp
        funcion7.h)
